--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Imagem Interativa</title>
+  <title>Jogo da Bomba</title>
+  <meta name="description" content="Desarme a bomba resolvendo desafios! Jogo interativo feito com HTML, CSS e JavaScript por Claudia.">
+  <meta name="keywords" content="jogo da bomba, Claudia, GitHub, JavaScript, HTML, CSS, desafios, portfólio">
+  <meta name="robots" content="index, follow">
   <link rel="stylesheet" href="estilo.css">
-  <!-- <link rel="stylesheet" href="estiloDARK.css"> -->
+  
   
    
 </head>
